data/derived/comb/progs/unify/prog6315.ml.out
Characters 87-88:
  List.fold_left f base fs;;
                 ^
Error: This expression has type int -> 'a -> int -> int
       but an expression was expected of type int -> 'a -> int
       Type int -> int is not compatible with type int 
